--- a/Gemini_Data_Augmentation_v_2.ipynb
+++ b/Gemini_Data_Augmentation_v_2.ipynb
@@ -16,8 +16,7 @@
         "id": "vnWMe82eO9LR"
       },
       "source": [
-        "## Data Augmentaion via Gemini 1.0 pro\n",
-        "# *Parapherize Version"
+        "## Data Augmentaion via Gemini 1.0 pro\n"
       ]
     },
     {
@@ -447,7 +446,7 @@
         "id": "LvAuHBPAYZk1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69,
+          "height": 86,
           "referenced_widgets": [
             "310d0a08cd224047a77b047d4ed639c6",
             "f4f505f0f31141f9afcda3536e929ea8",
@@ -471,7 +470,8 @@
             "101f4d1e519a44508741ace322b4ee9a",
             "364d019338ad4238828e185472efe817",
             "1ddc9e40de5f48fba079aa49953f9e21",
-            "0814288062e347b997ff718c3a62074f"
+            "0814288062e347b997ff718c3a62074f",
+            "73fc144996b14e9cbdad283d04bc6599"
           ]
         },
         "outputId": "16048197-7c43-4922-e7ba-c2c3fbd4ab95"
@@ -481,9 +481,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Dataset was updated in index: 20\n",
-            "[Tweet 21]: neutral; added.\n",
-            "[Tweet 22]: neutral; added.\n"
+            "Dataset was updated in index: 30\n",
+            "[Tweet 31]: neutral; added.\n",
+            "[Tweet 32]: neutral; added.\n",
+            "[Tweet 33]: neutral; added.\n"
           ]
         }
       ],
@@ -547,7 +548,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKSEM2R6019JecMvwJ+g5/",
+      "authorship_tag": "ABX9TyPbScoVAh5DuJjlx4jGyq87",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1263,6 +1264,28 @@
             "_view_module_version": "1.2.0",
             "_view_name": "StyleView",
             "description_width": ""
+          }
+        },
+        "73fc144996b14e9cbdad283d04bc6599": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_9f8fd060c539462db287ff80ca1065a9",
+              "IPY_MODEL_9c948ee775e4430798a2de8d10ee3a4d",
+              "IPY_MODEL_b1e70201183142b192693c573214d475"
+            ],
+            "layout": "IPY_MODEL_caf2b532d6694cf9b4fed6917a18330c"
           }
         }
       }
